fixed form input button alignment

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ section {
 }
 
 form {
+  display: flex;
   height: 50px;
 }
 
